[project]
name = "markdown-tools"
version = "0.1.0"
description = "A modular toolset for managing knowledge and tasks in markdown files"
authors = [
    {name = "githubuser11000",email = "153731316+githubuser11000@users.noreply.github.com"}
]
requires-python = "^3.10"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
