[project]
name = "markdown-tools"
version = "0.1.0"
description = "A modular toolset for managing knowledge and tasks in markdown files"
authors = [
    {name = "Alexander Meyer"}
]
requires-python = "^3.10"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that exercise multiple components or the filesystem",
]
