[project]
name = "markdown-tools"
version = "0.1.0"
description = "A modular toolset for managing knowledge and tasks in markdown files"
authors = [
    {name = "Alexander Meyer"}
]
requires-python = "^3.10"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)"
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that exercise multiple components or the filesystem",
]
